# rust-crate-diffs

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  dprint.json  justfile
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: general.yml  links.yml  scheduled-audit.yml  scorecard.yml  typos.yml
src/: cli.rs  main.rs  test_helpers.rs
src/domain/: cargo_crate.rs  mod.rs  semver.rs
src/domain/cargo_toml/: mod.rs  tests.rs
src/domain/cargo_toml/snapshots/: rust_crate_diffs__domain__cargo_toml__tests__new_from_buffer_creates_expected_config.snap  rust_crate_diffs__domain__cargo_toml__tests__new_successfully_parses_valid_cargo_toml_dependencies.snap
src/domain/repo/: mod.rs
src/domain/semver/: mod.rs  tests.rs
src/domain/semver/snapshots/: rust_crate_diffs__domain__semver__tests__fmt_semver_change_displays_expected_values.snap
src/domain/snapshots/: rust_crate_diffs__domain__semver__tests__fmt_semver_change_displays_expected_values.snap
src/snapshot_inputs/: cargo_toml_local.toml  cargo_toml_repo.toml
src/snapshots/: rust_crate_diffs__tests__get_rust_crate_diffs_returns_expected_result.snap
tests/cmd/: help.stdout  help.toml  missing-arg.stderr  missing-arg.toml  version.stdout  version.toml
