[package]
name = "rust-crate-diffs"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/rust-crate-diffs"
# git2 v0.20.2 raises MSRV to 1.82
rust-version = "1.82"
description = "Check Cargo.toml dependency changes against git repo head"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
config = "0.15.18"
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.28"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.2"

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.43.2", features = ["glob", "json"] }
trycmd = "0.15.11"

# Faster snapshot runs
# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
