[package]
name = "rust-crate-diffs"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/rust-crate-diffs"
# git2 0.20.4 requires MSRV to 1.86
rust-version = "1.86"
description = "Check Cargo.toml dependency changes against git repo head"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
config = "0.15.22"
env_logger = "0.11.10"
git2 = "0.20.4"
log = "0.4.29"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.47.2", features = ["glob", "json"] }
trycmd = "1.2.0"

# Faster snapshot runs
# See: https://docs.rs/insta/latest/insta/#optional-faster-runs
[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
